# ASIO-Microservices-Template

./: LICENSE  README.md
src/: CMakeLists.txt  readme.txt  vcpkg.json
src/asio-server/: CMakeLists.txt  authServer.cpp  authServer.h  model.accounts-odb.cxx  model.accounts-odb.hxx  model.accounts-odb.ixx  model.accounts.hxx  sa_asioserver.cc
src/async-server/: CMakeLists.txt  async_server.cc  authServer.cpp  authServer.h
src/client/: CMakeLists.txt  SAClient.cpp  SAClient.h  TestRunner.cpp  TestRunner.h  sa_client.cc
src/proto/: CMakeLists.txt  services.accounts.proto
src/server/: CMakeLists.txt  sa_server.cc
